Add login JWT token
